--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "gh-pages": "^3.1.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-reveal": "^1.2.2",
     "react-scripts": "4.0.3",
+    "scrollreveal": "^4.0.9",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
